Bug 150629 - LibreOffice Writer crashes, when editing a page break
Summary: LibreOffice Writer crashes, when editing a page break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.5.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.2 target:7.3....
Keywords: bibisected, bisected, haveBacktrace, regression
: 150242 150837 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-27 09:48 UTC by kontakt
Modified: 2022-09-07 05:35 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By: Caolán McNamara


Attachments
bt with debug symbols (gen) (2.13 KB, text/plain)
2022-08-27 13:50 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kontakt 2022-08-27 09:48:29 UTC
Description:
When trying to edit a page break (directly after the first page), LibreOffice crashes.

Steps to Reproduce:
1. Create a fresh LO writer document
2. Type two lines of text and create a page break between them
3. Hover over the page break with the cursor, then use the context menu to "edit page break"
-> Crash.

Actual Results:
Crash.

Expected Results:
Not a crash.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.3.5.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (en_US.UTF-8); UI: en-US
7.3.5-3
Calc: threaded
Comment 1 jcsanz 2022-08-27 10:17:51 UTC
Not reproducible by me.

Dialog apear correctly without any crash

Version: 7.2.5.2 (x64) / LibreOffice Community
Build ID: 499f9727c189e6ef3471021d6132d4c694f357e5
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: threaded
Comment 2 Julien Nabet 2022-08-27 13:50:41 UTC
Created attachment 182045 [details]
bt with debug symbols (gen)

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 Hossein 2022-08-27 15:31:01 UTC
Reproduced with the latest LO 7.5 dev master:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f5c3a215fdd5505ebba8ae341d2146c3a4f739e3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded

Also reproducible with:

Version: 7.4.0.1 / LibreOffice Community
Build ID: 43e5fcfbbadd18fccee5a6f42ddd533e40151bcf
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 4 Hossein 2022-08-28 08:23:44 UTC
Reproducible with x11:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f5c3a215fdd5505ebba8ae341d2146c3a4f739e3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: x11
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded


Reproducible with gtk3:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f5c3a215fdd5505ebba8ae341d2146c3a4f739e3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded

Reproducible with gtk4:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f5c3a215fdd5505ebba8ae341d2146c3a4f739e3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk4
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded

Reproducible with kf5:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f5c3a215fdd5505ebba8ae341d2146c3a4f739e3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded

Reproduced with qt5:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f5c3a215fdd5505ebba8ae341d2146c3a4f739e3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: qt5 (qfont+xcb)
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 5 Hossein 2022-08-28 23:06:25 UTC
Not reproducible with:

Version: 7.3.0.1 / LibreOffice Community
Build ID: 840fe2f57ae5ad80d62bfa6e25550cb10ddabd1d
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded

Reproducible with:

Version: 7.3.6.1 / LibreOffice Community
Build ID: 92b673af3a5e8f7cf4716be88dfaca424612f244
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fa-IR (en_US.UTF-8); UI: en-US
Calc: threaded

The regression has happened somewhere in 7.3 branch.
Comment 6 Hossein 2022-08-29 13:40:45 UTC
Bibisected to:

commit 9104861a41e0edd07e4d74da47acb4e9d92b1ddd
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu May 26 15:52:38 2022 +0100

    tdf#147708 create floating menubutton on demand
    
    and destroy when it is fully faded out. Otherwise windows runs out of
    gdi handles with document with large number of page breaks
    
    todo: rename some things in a follow up commit after this more easily
    backportable commit is merged
Comment 7 Caolán McNamara 2022-08-29 19:03:06 UTC
*** Bug 150242 has been marked as a duplicate of this bug. ***
Comment 8 Julien Nabet 2022-08-29 20:08:28 UTC
Badfully, I can't retrieve a Valgrind trace even by using gcc instead of clang because of this kind of message:
### unhandled dwarf2 abbrev form code 0x25
### unhandled dwarf2 abbrev form code 0x25
### unhandled dwarf2 abbrev form code 0x25
### unhandled dwarf2 abbrev form code 0x1b
### unhandled dwarf2 abbrev form code 0x25
### unhandled dwarf2 abbrev form code 0x25
### unhandled dwarf2 abbrev form code 0x25
### unhandled dwarf2 abbrev form code 0x1b

(extract of config.log of my local build for Valgrind:
ac_ct_AR='gcc-ar'
ac_ct_CC='gcc'
ac_ct_CXX='g++'
)

It seems DWARF5 isn't well managed even with gcc.

Luboš: put you in cc because I saw some comments from you on kde about this kind of pb. Perhaps you may have some opinion here.
Eg: is there a way to use DWARF4 by changing something in autogen.input ?


g++ (Debian 12.2.0-1) 12.2.0, Debian clang version 14.0.6-2)
Comment 9 Commit Notification 2022-08-29 20:12:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/51da8b9e80ea38a726bdc518fc8f19d4f13f806b

Resolves: tdf#150629 the window was destroyed from the fadetimer callback

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Julien Nabet 2022-08-29 20:19:42 UTC
On pc Debian x86-64 with master sources updated today including Caolán's patch, I don't reproduce the crash anymore (with gen or kf5 rendering).

(I just noticed this new error log on console with gtk3:
(soffice:1112503): GLib-GObject-WARNING **: 22:17:35.323: g_object_weak_unref: couldn't find weak ref 0x7fa0e295b670(0x5602a7c3d310)
but I suppose it's another story).

Thank you Caolán!
Comment 11 Commit Notification 2022-08-30 06:47:32 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/5b7ceed80f2943cd85bb70d19bc482fd2e712386

Resolves: tdf#150629 the window was destroyed from the fadetimer callback

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2022-08-30 06:48:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/188555883266b661ec201548bc4b4ccd01460862

Resolves: tdf#150629 the window was destroyed from the fadetimer callback

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Luboš Luňák 2022-08-30 08:05:39 UTC
(In reply to Julien Nabet from comment #8)
> It seems DWARF5 isn't well managed even with gcc.
> 
> Luboš: put you in cc because I saw some comments from you on kde about this
> kind of pb. Perhaps you may have some opinion here.

You need the (not yet released) Valgrind 3.20 or patches from https://bugs.kde.org/show_bug.cgi?id=452758 for it to understand DWARF5.

> Eg: is there a way to use DWARF4 by changing something in autogen.input ?

Use -gdwarf-4 (e.g. explicitly set CC/CXX to "gcc/g++ -gdwarf-4".
Comment 14 Caolán McNamara 2022-08-30 10:46:48 UTC
(In reply to Julien Nabet from comment #10)
> (I just noticed this new error log on console with gtk3:
> (soffice:1112503): GLib-GObject-WARNING **: 22:17:35.323:
> g_object_weak_unref: couldn't find weak ref 0x7fa0e295b670(0x5602a7c3d310)
> but I suppose it's another story).

yeah, that's a new unrelated warning. https://gerrit.libreoffice.org/c/core/+/139031 should fix that
Comment 15 Julien Nabet 2022-08-31 11:53:15 UTC
(In reply to Caolán McNamara from comment #14)
> (In reply to Julien Nabet from comment #10)
> > (I just noticed this new error log on console with gtk3:
> > (soffice:1112503): GLib-GObject-WARNING **: 22:17:35.323:
> > g_object_weak_unref: couldn't find weak ref 0x7fa0e295b670(0x5602a7c3d310)
> > but I suppose it's another story).
> 
> yeah, that's a new unrelated warning.
> https://gerrit.libreoffice.org/c/core/+/139031 should fix that

Indeed, I don't reproduce this with master sources updated today (so which includes your patch).
Comment 16 Commit Notification 2022-08-31 14:07:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3-6":

https://git.libreoffice.org/core/commit/dd8775dd0d89dac5bb239304efeafdbf515a8841

Resolves: tdf#150629 the window was destroyed from the fadetimer callback

It will be available in 7.3.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2022-09-05 15:35:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4-1":

https://git.libreoffice.org/core/commit/3d98211d5eeb2476770f2b17b0ebedf72bd52ffb

Resolves: tdf#150629 the window was destroyed from the fadetimer callback

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Xisco Faulí 2022-09-07 05:35:57 UTC
*** Bug 150837 has been marked as a duplicate of this bug. ***