Resolves: tdf#150629 the window was destroyed from the fadetimer callback

which is how it could be possible that SwPageBreakWin::dispose() could
be both called, stopping the timer, but the timer callback could access
the disposed SwPageBreakWin

Change-Id: If29ffb45fbde607d35c12064b05e4b5d25c2f009
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139011
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>